--- a/01-Introduccion/index.html
+++ b/01-Introduccion/index.html
@@ -14,10 +14,6 @@
         <p>Introducción</p>
         <p class="hashtag">#JSModernoConJuan</p>
     </div>
-
-    <script>
-        alert("Hola Mundo");
-        console.log("Hola Mundo");
-    </script>
+    <script src="js/app.js"></script>
 </body>
 </html>
